--- a/teinei-text-counter-demo/package.json
+++ b/teinei-text-counter-demo/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "teinei-text-counter": "file:../teinei-text-counter/pkg"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
