--- a/src/teinei-text-counter/Cargo.toml
+++ b/src/teinei-text-counter/Cargo.toml
@@ -3,6 +3,10 @@ name = "teinei-text-counter"
 version = "0.1.0"
 authors = ["roiban1344 <81000453+roiban1344@users.noreply.github.com>"]
 edition = "2018"
+description = "teinei-text-counter is a minimal WebAssembly wrapper of the unicode-segmentation crate just for counting grapheme clusters."
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/roiban1344/teinei-text-counter"
+
 
 [lib]
 crate-type = ["cdylib", "rlib"]
