--- a/teinei-text-counter-demo/package.json
+++ b/teinei-text-counter-demo/package.json
@@ -13,7 +13,7 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "teinei-text-counter": "file:../src/teinei-text-counter/pkg"
+    "teinei-text-counter": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
