--- a/teinei-text-counter-demo/package.json
+++ b/teinei-text-counter-demo/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
-    "next": "12.1.5",
+    "next": "^12.1.6-canary.9",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "teinei-text-counter": "^0.1.0"
